# Tomurcuk

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md
documents/: CodeStructure.md  CodingRules.md  PlannedFeatures.md
private/tomurcuk/base/: Bytes.cpp  LinearMemoryAllocator.cpp  MemoryAllocator.cpp  VirtualBlock.cpp
private/tomurcuk/base/windows/: Bytes.cpp
private/tomurcuk/demo/: Demo.cpp  PrivateDemo.cpp
private/tomurcuk/status/: Crashes.cpp  StandardError.cpp
private/tomurcuk/status/windows/: PlatformError.cpp
private/tomurcukTest/: main.cpp
privateHeaders/tomurcuk/windows/: Windows.hpp
privateHeaders/trk/: PrivateDemo.hpp
public/tomurcuk/base/: ArrayListView.hpp  ArrayPointer.hpp  ArraySetView.hpp  Bytes.hpp  Hashable.hpp  LinearMemoryAllocator.hpp  MemoryAllocator.hpp  VirtualBlock.hpp
publicHeaders/tomurcuk/: Crashes.hpp  PlatformError.hpp  StandardError.hpp
publicHeaders/trk/: Crashes.hpp  Demo.hpp  PlatformError.hpp  StandardError.hpp
sources/private/tomurcuk/base/: Hasher.cpp
sources/private/tomurcuk/base/windows/: Bytes.cpp  VirtualBlock.cpp
sources/private/tomurcuk/demo/: PrivateDemo.hpp
sources/private/tomurcukTest/: main.cpp
sources/private/tomurcukTest/base/: LinearMemoryAllocator.cpp
sources/public/tomurcuk/base/: ArrayList.hpp  ArrayPointer.hpp  ArraySetView.hpp  ArrayView.hpp  EqualityComparable.hpp  Hasher.hpp  LinearMemoryAllocator.hpp  MemoryAllocator.hpp  VirtualBlock.hpp
sources/public/tomurcuk/base/windows/: Windows.hpp
sources/public/tomurcuk/demo/: Demo.hpp
sources/public/tomurcuk/status/: Crashes.hpp
sources/public/tomurcukTest/base/: LinearMemoryAllocator.hpp
sources/tomurcuk/: Crashes.cpp  Demo.cpp  PrivateDemo.cpp  StandardError.cpp
sources/tomurcuk/windows/: PlatformError.cpp
sources/tomurcukTest/: main.cpp
sources/trk/: Crashes.cpp  Demo.cpp  PrivateDemo.cpp  StandardError.cpp
sources/trk/windows/: PlatformError.cpp
sources/trkTest/: main.cpp
